@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2024 The MZmine Development Team
+ * Copyright (c) 2004-2025 The mzmine Development Team
  *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
@@ -30,15 +30,14 @@ import io.github.mzmine.datamodel.features.FeatureAnnotationPriority;
 import io.github.mzmine.datamodel.features.FeatureList;
 import io.github.mzmine.datamodel.features.FeatureListRow;
 import io.github.mzmine.datamodel.features.types.DataType;
+import io.github.mzmine.datamodel.statistics.DataTableUtils;
+import io.github.mzmine.datamodel.statistics.FeaturesDataTable;
 import io.github.mzmine.gui.chartbasics.simplechart.datasets.ColoredXYZDataset;
 import io.github.mzmine.gui.chartbasics.simplechart.datasets.DatasetAndRenderer;
 import io.github.mzmine.gui.chartbasics.simplechart.datasets.RunOption;
 import io.github.mzmine.gui.chartbasics.simplechart.renderers.ColoredXYShapeRenderer;
 import io.github.mzmine.javafx.mvci.FxUpdateTask;
-import io.github.mzmine.modules.dataanalysis.utils.imputation.ImputationFunction;
-import io.github.mzmine.modules.dataanalysis.utils.imputation.ImputationFunctions;
-import io.github.mzmine.modules.dataanalysis.utils.scaling.ScalingFunction;
-import io.github.mzmine.modules.dataanalysis.utils.scaling.ScalingFunctions;
+import io.github.mzmine.modules.visualization.projectmetadata.SampleTypeFilter;
 import io.github.mzmine.modules.visualization.projectmetadata.table.columns.MetadataColumn;
 import io.github.mzmine.taskcontrol.progress.TotalFinishedItemsProgress;
 import io.github.mzmine.util.annotations.CompoundAnnotationUtils;
@@ -49,7 +48,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import javafx.collections.ObservableList;
 import org.jetbrains.annotations.NotNull;
 
 public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
@@ -58,15 +56,14 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
   private final Integer rangePcIndex;
   private final Integer domainPcIndex;
   private final MetadataColumn<?> metadataColumn;
-  private final List<FeatureListRow> selectedRows;
   private final AbundanceMeasure abundance;
   private final List<FeatureList> flists;
   private final List<DatasetAndRenderer> scoresDatasets = new ArrayList<>();
   private final List<DatasetAndRenderer> loadingsDatasets = new ArrayList<>();
   private final List<Integer> components = new ArrayList<>();
-  private final ImputationFunction imputer;
 
-  private final ScalingFunction scaling;
+  private final SampleTypeFilter sampleTypeFilter;
+  private FeaturesDataTable featureDataTable;
   private PCARowsResult pcaRowsResult;
 
   protected PCAUpdateTask(@NotNull String taskName, PCAModel model) {
@@ -75,15 +72,18 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
     domainPcIndex = Objects.requireNonNullElse(model.getDomainPc(), 0) - 1;
     rangePcIndex = Objects.requireNonNullElse(model.getRangePc(), 0) - 1;
     metadataColumn = model.getMetadataColumn();
-    selectedRows = model.getSelectedRows();
-    flists = model.getFlists();
+    // only aligned feature lists
+    flists = model.getFlists().stream().filter(flist -> flist.getNumberOfRawDataFiles() > 1)
+        .toList();
     abundance = model.getAbundance();
 
-    final ScalingFunctions scalingFunction = model.getScalingFunction();
-    scaling = scalingFunction.getScalingFunction();
+    sampleTypeFilter = model.getSampleTypeFilter();
+    featureDataTable = model.getFeatureDataTable();
+  }
 
-    final ImputationFunctions imputationFunction = model.getImputationFunction();
-    imputer = imputationFunction.getImputer();
+  @Override
+  public void onFailedPreCondition() {
+    clearGui();
   }
 
   @Override
@@ -92,16 +92,16 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
       return false;
     }
 
-//    if (metadataColumn != null && MZmineCore.getProjectMetadata().getColumnByName(metadataColumn) == null
-//        && !metadataColumn.isBlank()) {
-//      return false;
-//    }
-
     if (flists == null || flists.isEmpty() || flists.getFirst() == null) {
       return false;
     }
 
-    if (abundance == null) {
+    if (abundance == null || featureDataTable == null
+        || featureDataTable.getNumberOfSamples() == 0) {
+      return false;
+    }
+
+    if (sampleTypeFilter.isEmpty()) {
       return false;
     }
 
@@ -110,17 +110,29 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
 
   @Override
   protected void process() {
-    final ObservableList<FeatureListRow> rows = flists.get(0).getRows();
+    if (featureDataTable == null || featureDataTable.getNumberOfSamples() == 0) {
+      return;
+    }
+
+    // data was already prepared
+    final List<FeatureListRow> rows = featureDataTable.getFeatureListRows();
+
+    // change sorting
     final Comparator<? super DataType<?>> annotationPrioSorter = FeatureAnnotationPriority.createSorter(
         SortOrder.ASCENDING);
     final Map<FeatureListRow, DataType<?>> rowsMappedToBestAnnotation = CompoundAnnotationUtils.mapBestAnnotationTypesByPriority(
         rows, true);
-    final List<FeatureListRow> rowsSortedByAnnotationPrio = rows.stream().sorted(
-        ((r1, r2) -> annotationPrioSorter.compare(rowsMappedToBestAnnotation.get(r1),
-            rowsMappedToBestAnnotation.get(r2)))).toList();
+    final Comparator<FeatureListRow> finalRowSorter = (r1, r2) -> annotationPrioSorter.compare(
+        rowsMappedToBestAnnotation.get(r1), rowsMappedToBestAnnotation.get(r2));
 
-    pcaRowsResult = PCAUtils.performPCAOnRows(rowsSortedByAnnotationPrio, abundance, scaling,
-        imputer);
+    // apply sorting to DataTable
+    featureDataTable = DataTableUtils.createSortedCopy(featureDataTable, finalRowSorter);
+
+    // perform PCA - scaling and missing value imputation is already done
+    pcaRowsResult = PCAUtils.performPCAOnDataTable(featureDataTable);
+    if (pcaRowsResult == null) {
+      return;
+    }
     progressProvider.getAndIncrement();
 
     final PCAScoresProvider scores = new PCAScoresProvider(pcaRowsResult, "Scores", Color.RED,
@@ -154,19 +166,28 @@ public class PCAUpdateTask extends FxUpdateTask<PCAModel> {
 
     if (rangePcIndex < components.size()) {
       model.setRangePc(rangePcIndex + 1);
-    } else {
+    } else if (!components.isEmpty()) {
       model.setRangePc(components.getLast());
     }
     if (domainPcIndex < components.size()) {
       model.setDomainPc(domainPcIndex + 1);
-    } else {
-      model.setDomainPc(components.getLast());
+    } else if (!components.isEmpty()) {
+      model.setDomainPc(components.getFirst());
     }
+  }
+
+  private void clearGui() {
+    model.setScoresDatasets(List.of());
+    model.setLoadingsDatasets(List.of());
+    model.setPcaResult(null);
+    model.getAvailablePCs().clear();
+    model.setDomainPc(1);
+    model.setRangePc(2);
   }
 
   @Override
   public String getTaskDescription() {
-    return STR."Computing PCA dataset for \{flists.get(0).getName()}";
+    return "Computing PCA dataset for %s".formatted(flists.getFirst().getName());
   }
 
   @Override
