@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2022 The MZmine Development Team
+ * Copyright (c) 2004-2025 The mzmine Development Team
  *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
@@ -25,27 +25,34 @@
 
 package io.github.mzmine.modules.tools.batchwizard;
 
+import static io.github.mzmine.modules.tools.batchwizard.WizardPart.WORKFLOW;
+
+import io.github.mzmine.gui.DesktopService;
 import io.github.mzmine.gui.mainwindow.SimpleTab;
+import io.github.mzmine.javafx.components.factories.FxButtons;
+import io.github.mzmine.javafx.components.util.FxLayout;
+import io.github.mzmine.javafx.dialogs.DialogLoggerUtil;
+import io.github.mzmine.javafx.util.FxIconUtil;
+import io.github.mzmine.javafx.util.FxIcons;
 import io.github.mzmine.main.MZmineCore;
 import io.github.mzmine.modules.batchmode.BatchModeModule;
 import io.github.mzmine.modules.batchmode.BatchModeParameters;
 import io.github.mzmine.modules.batchmode.BatchQueue;
-import io.github.mzmine.modules.tools.batchwizard.builders.WizardBatchBuilder;
 import io.github.mzmine.modules.tools.batchwizard.io.LocalWizardSequenceFile;
 import io.github.mzmine.modules.tools.batchwizard.io.WizardSequenceIOUtils;
 import io.github.mzmine.modules.tools.batchwizard.io.WizardSequenceSaveModule;
 import io.github.mzmine.modules.tools.batchwizard.subparameters.MassSpectrometerWizardParameters;
 import io.github.mzmine.modules.tools.batchwizard.subparameters.WizardStepParameters;
+import io.github.mzmine.modules.tools.batchwizard.subparameters.WorkflowWizardParameters;
 import io.github.mzmine.modules.tools.batchwizard.subparameters.factories.IonInterfaceWizardParameterFactory;
 import io.github.mzmine.modules.tools.batchwizard.subparameters.factories.IonMobilityWizardParameterFactory;
 import io.github.mzmine.modules.tools.batchwizard.subparameters.factories.MassSpectrometerWizardParameterFactory;
-import io.github.mzmine.modules.tools.batchwizard.subparameters.factories.WizardParameterFactory;
+import io.github.mzmine.modules.tools.batchwizard.subparameters.factories.WorkflowWizardParameterFactory;
 import io.github.mzmine.parameters.ParameterUtils;
 import io.github.mzmine.parameters.dialogs.ParameterSetupPane;
 import io.github.mzmine.parameters.parametertypes.filenames.LastFilesButton;
-import io.github.mzmine.javafx.dialogs.DialogLoggerUtil;
 import io.github.mzmine.util.ExitCode;
-import io.github.mzmine.javafx.util.FxIconUtil;
+import io.mzio.links.MzioMZmineLinks;
 import java.io.File;
 import java.text.MessageFormat;
 import java.time.LocalDate;
@@ -55,7 +62,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Set;
+import java.util.Optional;
 import java.util.logging.Level;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
@@ -63,6 +70,7 @@ import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.CacheHint;
 import javafx.scene.control.Button;
+import javafx.scene.control.ButtonBase;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
 import javafx.scene.control.ScrollPane;
@@ -77,7 +85,9 @@ import javafx.scene.image.ImageView;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.HBox;
+import javafx.scene.layout.Priority;
 import javafx.scene.layout.Region;
+import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -102,12 +112,16 @@ public class BatchWizardTab extends SimpleTab {
   private boolean listenersActive = true;
   private TabPane tabPane;
   private HBox schemaPane;
+  private final int helpButtonSize = 50;
 
   public BatchWizardTab() {
-    super("Processing Wizard");
+    super("mzwizard");
+//    setGraphic(LightAndDarkModeIcon.mzwizardImageTab(200, 18));
     ALL_PRESETS = WizardStepParameters.createAllPresets();
     localPresetsButton = new LastFilesButton("Local presets", true,
         file -> applyLocalPartialSequence(localPresets.get(file)));
+    localPresetsButton.setGraphic(
+        FxIconUtil.getFontIcon("bi-folder-symlink", FxIconUtil.DEFAULT_ICON_SIZE));
     createContentPane();
     findAllLocalPresetFiles();
     // reset to mzmine default presets (loading the local presets have changed the parameters already once)
@@ -166,34 +180,57 @@ public class BatchWizardTab extends SimpleTab {
         .orElse(IonInterfaceWizardParameterFactory.HPLC);
 
     // apply filters
-    filterComboBox(WizardPart.IMS, ionization.getMatchingImsPresets());
-    filterComboBox(WizardPart.WORKFLOW, ionization.getMatchingWorkflowPresets());
+    filterComboBox(WizardPart.IMS, WizardPartFilter.allow(ionization.getMatchingImsPresets()));
+    filterWorkflows(sequenceSteps);
 
     // check timsTOF and TWIMS TOF only
-    var ims = sequenceSteps.get(WizardPart.IMS)
+    IonMobilityWizardParameterFactory ims = sequenceSteps.get(WizardPart.IMS)
         .map(step -> (IonMobilityWizardParameterFactory) step.getFactory())
         .orElse(IonMobilityWizardParameterFactory.NO_IMS);
 
-    filterComboBox(WizardPart.MS, ims.getMatchingMassSpectrometerPresets());
+    filterComboBox(WizardPart.MS, WizardPartFilter.allow(ims.getMatchingMassSpectrometerPresets()));
+
+    // after import or applying a partial sequence (changing multiple steps at once) it is important to select the correct item
+    ensureComboBoxSelection();
+  }
+
+  private void ensureComboBoxSelection() {
+    // select the correct options
+    for (var preset : sequenceSteps) {
+      ComboBox<WizardStepParameters> combo = combos.get(preset.getPart());
+      if (combo != null) {
+        combo.getSelectionModel().select(preset);
+      }
+    }
+  }
+
+  private void filterWorkflows(WizardSequence sequenceSteps) {
+    final List<WizardStepParameters> availableWorkflows = ALL_PRESETS.get(WizardPart.WORKFLOW)
+        .stream().filter(workflow -> {
+          if (workflow instanceof WorkflowWizardParameters workflowParams) {
+            return workflowParams.isApplicableToSteps(sequenceSteps);
+          }
+          return false;
+        }).toList();
+    var selected = setItemsToCombo(WORKFLOW, availableWorkflows, false);
+    sequenceSteps.set(WORKFLOW, selected); // set the updated sequence
   }
 
   /**
    * Filter combobox and set new selection
    *
-   * @param part              the part
-   * @param filteredFactories the filtered list of presets
+   * @param part the part
    */
-  private void filterComboBox(final WizardPart part, WizardParameterFactory[] filteredFactories) {
-    var filterSet = Set.of(filteredFactories);
+  private void filterComboBox(final WizardPart part, WizardPartFilter filter) {
 
     List<WizardStepParameters> filteredPresets = ALL_PRESETS.get(part).stream()
-        .filter(workflow -> filterSet.contains(workflow.getFactory())).toList();
+        .filter(workflow -> filter.accept(workflow.getFactory())).toList();
 
     ComboBox<WizardStepParameters> combo = combos.get(part);
     ObservableList<WizardStepParameters> currentPresets = combo.getItems();
     if (!currentPresets.equals(filteredPresets)) {
       // need to set new selection to workflow
-      var selected = setItemsToCombo(combo, filteredPresets, false);
+      var selected = setItemsToCombo(part, filteredPresets, false);
       sequenceSteps.set(part, selected);
 
       if (part == WizardPart.MS) {
@@ -211,16 +248,17 @@ public class BatchWizardTab extends SimpleTab {
     }
   }
 
-  private WizardStepParameters setItemsToCombo(final ComboBox<WizardStepParameters> combo,
+  private WizardStepParameters setItemsToCombo(final WizardPart part,
       final List<WizardStepParameters> newItems, boolean notifyListeners) {
+    final ComboBox<WizardStepParameters> combo = combos.get(part);
+
     boolean oldNotify = listenersActive;
     setListenersActive(notifyListeners);
     // keep selection or select first element if not available
     SingleSelectionModel<WizardStepParameters> selection = combo.getSelectionModel();
-    WizardStepParameters oldSelected = selection.getSelectedItem();
     // set new items
     combo.setItems(FXCollections.observableList(newItems));
-    selection.select(oldSelected);
+    sequenceSteps.get(part).ifPresentOrElse(selection::select, selection::clearSelection);
     if (selection.getSelectedIndex() < 0) {
       selection.selectFirst();
     }
@@ -280,10 +318,10 @@ public class BatchWizardTab extends SimpleTab {
     return spacer;
   }
 
-  private VBox createTopMenu() {
-    VBox vbox = new VBox(4);
-    vbox.setAlignment(Pos.CENTER);
-    VBox.setMargin(vbox, new Insets(5));
+  private Region createTopMenu() {
+    VBox controlSchemaPane = new VBox(4);
+    controlSchemaPane.setAlignment(Pos.CENTER);
+    VBox.setMargin(controlSchemaPane, new Insets(5));
 
     var topPane = new FlowPane(4, 4);
     topPane.setAlignment(Pos.CENTER);
@@ -295,7 +333,10 @@ public class BatchWizardTab extends SimpleTab {
     // LC/GC - IMS? - MS instrument, Apply defaults
     for (final WizardPart part : WizardPart.values()) {
       var presets = FXCollections.observableArrayList(ALL_PRESETS.get(part));
-      sequenceSteps.add(presets.get(0));
+      if (presets.isEmpty()) {
+        continue;
+      }
+      sequenceSteps.add(presets.getFirst());
       if (presets.size() == 1) {
         continue;
       }
@@ -323,14 +364,10 @@ public class BatchWizardTab extends SimpleTab {
           });
     }
 
-    Button createBatch = new Button("Create batch");
-    createBatch.setOnAction(event -> createBatch());
-
-    Button save = new Button("Save presets");
-    save.setOnAction(event -> saveLocalWizardSequence());
-
-    Button load = new Button("Load presets");
-    load.setOnAction(event -> chooseAndLoadLocalSequence());
+    Button createBatch = FxButtons.createButton("Create batch", FxIcons.START, null,
+        this::createBatch);
+    Button save = FxButtons.createSaveButton("Save presets", this::saveLocalWizardSequence);
+    Button load = FxButtons.createLoadButton("Load presets", this::chooseAndLoadLocalSequence);
 
     topPane.getChildren()
         .addAll(createSpacer(), new Label("="), createSpacer(), createBatch, save, load,
@@ -338,8 +375,19 @@ public class BatchWizardTab extends SimpleTab {
 
     schemaPane = new HBox(0);
     schemaPane.setAlignment(Pos.CENTER);
-    vbox.getChildren().addAll(topPane, schemaPane);
-    return vbox;
+    // add a wrapper around the top pane with combo boxes and buttons so the help button does not overlap
+    final HBox topPaneWrapper = FxLayout.newHBox(new Insets(0, helpButtonSize, 0, helpButtonSize),
+        topPane);
+    HBox.setHgrow(topPane, Priority.ALWAYS);
+    controlSchemaPane.getChildren().addAll(topPaneWrapper, schemaPane);
+
+    final ButtonBase help = FxIconUtil.newIconButton(FxIcons.QUESTIONMARK, 50,
+        "Open the mzwizard documentation", () -> DesktopService.getDesktop()
+            .openWebPage(MzioMZmineLinks.WIZARD_DOCUMENTATION.getUrl()));
+    final StackPane stackPane = new StackPane(controlSchemaPane, help);
+    StackPane.setAlignment(help, Pos.TOP_RIGHT);
+
+    return stackPane;
   }
 
   /**
@@ -374,6 +422,9 @@ public class BatchWizardTab extends SimpleTab {
   private void applyPartialSequence(final WizardSequence partialSequence) {
     setListenersActive(false);
 
+    // keep old parameters before applying sequence
+    updateAllParametersFromUi();
+
     // partialSequence might contain other instances of the presets (after loading)
     // need to apply all parameter changes to ALL_PRESETS
     WizardSequence correctPartialSequence = new WizardSequence();
@@ -389,15 +440,11 @@ public class BatchWizardTab extends SimpleTab {
     // keep current as default parameters
     sequenceSteps.apply(correctPartialSequence);
 
-    for (var preset : sequenceSteps) {
-      ComboBox<WizardStepParameters> combo = combos.get(preset.getPart());
-      if (combo != null) {
-        combo.getSelectionModel().select(preset);
-      }
-    }
-    setListenersActive(true);
-
+    // apply preset filters so that combos show the correct options
     createParameterPanes();
+
+    // now activate listeners again. Should be after changing the sequence and createParameterPanes
+    setListenersActive(true);
   }
 
   /**
@@ -430,12 +477,18 @@ public class BatchWizardTab extends SimpleTab {
     if (sequenceSteps == null) {
       return;
     }
+    final Optional<WizardStepParameters> workflow = sequenceSteps.get(WORKFLOW);
+    if (workflow.isEmpty()) {
+      DialogLoggerUtil.showErrorDialog("Cannot create batch",
+          "A workflow must be selected to create a batch.");
+      return;
+    }
 
     BatchModeParameters batchModeParameters = (BatchModeParameters) MZmineCore.getConfiguration()
         .getModuleParameters(BatchModeModule.class);
     try {
-      final BatchQueue q = WizardBatchBuilder.createBatchBuilderForSequence(sequenceSteps)
-          .createQueue();
+      final BatchQueue q = ((WorkflowWizardParameterFactory) workflow.get()
+          .getFactory()).getBatchBuilder(sequenceSteps).createQueue();
       batchModeParameters.getParameter(BatchModeParameters.batchQueue).setValue(q);
 
       if (batchModeParameters.showSetupDialog(false) == ExitCode.OK) {
@@ -461,8 +514,15 @@ public class BatchWizardTab extends SimpleTab {
       MZmineCore.getDesktop().displayErrorMessage("Please check the parameters.\n" + errorMessages);
       return null;
     }
+
+    // checks like min sample number, qcs, metadata file
+    if (!new BatchWizardCreateBatchChecker(sequenceSteps).checks()) {
+      return null;
+    }
+
     return sequenceSteps;
   }
+
 
   /**
    * Updates the parameters in all steps from the UI components. Does not check for completeness.
